Fixing navbar close on click on small screen

--- a/cv/css/print.css
+++ b/cv/css/print.css
@@ -18,6 +18,10 @@ section {
   min-height: 100%;
 }
 
+h2 {
+  margin-top: 10px
+}
+
 table {
   width: 90%;
   margin: auto;
